<resources>
    <string name="app_name">Recipe App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="full_name">FULL NAME</string>
    <string name="register">Register</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="about_image_desc">admins</string>
    <string name="about_the_application">About the Application</string>
    <string name="about_the_creators">Our Team</string>
    <string name="synopsis">This recipe application allows users to browse, search, and save their favorite recipes. Users can also watch recipe videos and get detailed information about each recipe. The app provides a user-friendly interface. Save your favorite recipes for quick access and share them with friends and family. Designed to inspire and simplify home cooking.</string>
    <string name="creator_name">Creator Name</string>
    <string name="creator_image">creator image</string>
    <string name="about_cover">about cover</string>
    <string name="learn_more">Learn More</string>
    <string name="not_favorite">not in favorite</string>
    <string name="favorite">in favorite</string>
    <string name="recipe_info">Recipe Info:</string>
    <string name="recipe_title">"Title"</string>
    <string name="recipe_area">Area</string>
    <string name="recipe_category">Category</string>
    <string name="tags">Tags</string>
    <string name="ingrediants">Ingrediants:</string>
    <string name="instructions">Instructions:</string>
    <string name="more_info">More Info</string>
    <string name="less_info">Hide Info</string>
    <string name="content_for_scrollView">detail scroll</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_the_creator">About the Creator</string>
    <string name="fade_about">fade</string>
    <string name="home_nav">Home</string>
    <string name="favorites_nav">Favorites</string>
    <string name="search_nav">Search</string>
    <string name="login">Login</string>
    <string name="loginfragment">loginFragment</string>
    <string name="select_category">Select Category</string>
    <string name="search_by_ingredient">Search by ingredient</string>

    <string-array name="search_criteria_options">
        <item>Title</item>
        <item>Category</item>
        <item>Ingredient</item>
    </string-array>
</resources>