<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                   app:cardElevation="10dp"
                                   app:cardCornerRadius="20dp"
                                   android:layout_marginBottom="20sp"
                                   android:layout_height="wrap_content" android:id="@+id/recipeInfoCard">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/recipe_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp" android:layout_marginStart="20dp" android:textSize="24sp"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/recipe_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" android:layout_marginStart="20dp"/>
        <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/info_title"
                app:layout_constraintLeft_toRightOf="parent"
                android:textColor="@color/info_gray" app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="10dp"
                android:textSize="16sp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_action_name_location"
                android:id="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                android:layout_marginTop="50dp" app:layout_constraintStart_toStartOf="@+id/imageView3"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_action_name_category"
                android:id="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                android:layout_marginTop="50dp" app:layout_constraintStart_toStartOf="@+id/imageView"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_action_name_name"
                android:id="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="20dp"/>
        <TextView
                android:text="@string/recipe_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/imageView" app:layout_constraintStart_toEndOf="@+id/imageView"
                android:layout_marginStart="20dp" android:textSize="16sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/info_area"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginTop="10dp"
                android:textColor="@color/info_gray" android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@+id/textView5"
                android:layout_marginEnd="10dp"/>
        <TextView
                android:text="@string/recipe_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="20dp"/>
        <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/info_category"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:textColor="@color/info_gray"
                android:textSize="16sp" android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView7" android:layout_marginEnd="10dp"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_action_name_tags"
                android:id="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginTop="50dp"/>
        <TextView
                android:text="@string/tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView9"
                android:textSize="16sp" app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4" android:layout_marginStart="20dp"/>
        <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/info_tags"
                app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginTop="10dp"
                android:textSize="16sp" android:textColor="@color/info_gray"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView9" android:layout_marginEnd="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>